<resources>
    <string name="app_name">Tap Penguin</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="instructions">Tap the screen to make Pinguin move up or down the screen.</string>
    <string name="overview"><b>Pinguin the Penguin needs your help to navigate his way down the slope without hitting any obstacles on the way!</b></string>
    <string name="start_button">START</string>
    <string name="settings_page">Sound</string>
    <string name="back_button">Back</string>
    <string name="begin_button">BEGIN GAME</string>
    <string name="settings_button">SETTINGS</string>
    <string name="exit_button">EXIT</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_game">GameActivity</string>
</resources>
